quay-all-in-one.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quay-postgresql
  template:
    metadata:
      labels:
        app: quay-postgresql
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: quay
        - name: POSTGRESQL_PASSWORD
          value: quay
        - name: POSTGRESQL_DATABASE
          value: quay
        image: registry.redhat.io/rhel8/postgresql-12:latest
        name: postgresql
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 4m
            memory: 40Mi
        volumeMounts:
        - name: postgresql-start
          mountPath: /opt/app-root/src/postgresql-start
      volumes:
      - name: postgresql-start
        configMap:
          name: quay-postgresql-postgresql-start
---
apiVersion: v1
kind: Service
metadata:
  name: quay-postgresql
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: quay-postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quay-redis
  template:
    metadata:
      labels:
        app: quay-redis
    spec:
      containers:
      - image: registry.redhat.io/rhel8/redis-6
        name: redis
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 2m
            memory: 10Mi
---
apiVersion: v1
kind: Service
metadata:
  name: quay-redis
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: quay-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-app
  annotations:
    app.openshift.io/connects-to: |
      [
        {"apiVersion":"apps/v1","kind":"Deployment","name":"quay-redis"},
        {"apiVersion":"apps/v1","kind":"Deployment","name":"quay-postgresql"}
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quay-app
  template:
    metadata:
      labels:
        app: quay-app
    spec:
      containers:
      # web
      - image: quay.io/projectquay/quay:latest
        name: web
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /quay-registry/conf/stack
        - name: tmp
          mountPath: /tmp
      # registry
      - image: quay.io/projectquay/quay:latest
        name: registry
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /quay-registry/conf/stack
        - name: tmp
          mountPath: /tmp
      # nginx and pushgateway
      - image: quay.io/projectquay/quay:latest
        name: nginx
        volumeMounts:
        - name: config
          mountPath: /quay-registry/conf/stack
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: config
        secret:
          secretName: quay-app-config
      - name: tmp
        persistentVolumeClaim:
          claimName: quay-tmp
---
apiVersion: v1
kind: Service
metadata:
  name: quay-app
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: quay-app
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quay
spec:
  to:
    kind: Service
    name: quay-app
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
